# aquaverse

./: .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: davinci.txt
data/qdrant_storage/: meta.json
data/qdrant_storage/collection/Document/: storage.sqlite
experiments/: haystack_quickstart.py  rag_on_pdf.py
haystack_exp/: basic_rag_with_indexing.py  haystack_quickstart.py  indexing_pipeline.py  rag_on_pdf.py  rag_pipeline.py
rag/: rag_pipeline.py
