[project]
name = "dhagam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "haystack-ai>=2.14.1",
    "ipykernel>=6.29.5",
    "pypdf>=5.5.0",
    "qdrant-haystack>=9.1.3",
    "trafilatura>=2.0.0",
]
